src/objects/Related_Website__c.object
<CustomObject>
    <description>Websites related to an account.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Websites</relationshipLabel>
        <relationshipName>Related_Websites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Url__c</fullName>
        <label>Website URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Website_Type__c</fullName>
        <label>Website Type</label>
        <picklist>
            <picklistValues>
                <fullName>Website</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Landing Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Commerce Site</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Related Website</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Related Website Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Websites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>